--- a/DOMjudge/T203 - El alumno afortunado/T203 - El alumno afortunado/T203 - El alumno afortunado.vcxproj
+++ b/DOMjudge/T203 - El alumno afortunado/T203 - El alumno afortunado/T203 - El alumno afortunado.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="Queue.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
