invertir y duplicar una lista enlazada

--- a/ApuntesClase/Ej-Duplicar una lista enlazada/Ej-Duplicar una lista enlazada/Ej-Duplicar una lista enlazada.vcxproj
+++ b/ApuntesClase/Ej-Duplicar una lista enlazada/Ej-Duplicar una lista enlazada/Ej-Duplicar una lista enlazada.vcxproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <ClInclude Include="list_linked_single.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="sample.in" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
